# NPChain

./: .gitignore  CMakeLists.txt  DEPLOY_STEP_BY_STEP.md  README.md
deploy/: Dockerfile.node  Dockerfile.proxy  deploy_shield.sh  docker-compose.shield.yml
deploy/shield/: Dockerfile.node  Dockerfile.proxy  docker-compose.yml  launch_shield.bat  launch_shield.sh  proxy.cpp
deploy/testnet/: Dockerfile.faucet  Dockerfile.testnet  TESTNET_GUIDE.md  deploy_testnet.sh  docker-compose.testnet.yml  entrypoint.sh  faucet.py  testnet.conf
deploy/testnet/monitoring/: prometheus.yml
deploy/testnet/monitoring/grafana-datasources/: prometheus.yml
docs/: ARCHITECTURE.md  CRYPTO_AGILITY.md  INSCRIPTIONS.md  INVESTOR_BRIEF.md  L2_ARCHITECTURE.md  L2_USE_CASES.md  PRIVACY_ARCHITECTURE.md
docs/gitbook/: README.md  SUMMARY.md  addresses.md  anti-sybil.md  architecture.md  blocks.md  consensus.md  fees.md  governance.md  hardware.md  installation.md  migration.md  mining-commands.md  mining.md  p2p-protocol.md  project-structure.md  proposal-types.md  quantum.md  quick-start.md  rpc-api.md  security.md  testnet.md  tokenomics.md  wallet.md
include/config/: testnet.hpp  testnet_config.hpp
include/consensus/: ponw_engine.hpp
include/core/: block.hpp  chain.hpp  transaction.hpp
include/crypto/: agility.hpp  commitment.hpp  dilithium.hpp  hash.hpp  kyber.hpp
include/governance/: governance.hpp
include/mining/: solver.hpp
include/network/: network.hpp
include/privacy/: privacy.hpp
include/proxy/: proxy_shield.hpp
include/security/: security.hpp
include/utils/: types.hpp
src/: chain_validator.cpp  genesis_generator.cpp  main_miner.cpp  main_node.cpp  main_wallet.cpp  mainnet_node.cpp  p2p.hpp  testnet_node.cpp  wallet.cpp
src/consensus/: difficulty.cpp  instance_generator.cpp  ponw_engine.cpp  vdf.cpp
src/crypto/: commitment.cpp  dilithium.cpp  hash.cpp  kyber.cpp
src/mining/: sat_solver.cpp
testnet/: DEPLOY_GUIDE.md  Dockerfile.testnet  docker-compose.yml  launch_testnet.sh
testnet/config/: prometheus-testnet.yml  testnet.json
tests/: test_consensus.cpp  test_crypto.cpp  test_emission.cpp  test_mining.cpp  test_ponw_loop.cpp
tools/: export_web_wallet.sh
web/: explorer.html  governance.html  index.html  kyc.html
